# Snake

./: CMakeLists.txt  README.md
include/: clearScreen.h  clearscreen.h  coordinate.h  direction.h  food.h  gamedata.h  gamestate.h  instructions.h  keyboardListener.h  keyboardmanager.h  menu.h  playing.h  render.h  snake.h  snakeGame.h  snakegame.h  update.h
src/: clearScreen.cpp  clearscreen.cpp  food.cpp  instructions.cpp  keyboardListener.cpp  keyboardmanager.cpp  main.cpp  menu.cpp  playing.cpp  render.cpp  snake.cpp  snakeGame.cpp  snakegame.cpp  update.cpp
tests/: testFood.cpp  testSnake.cpp  testsPlaying.cpp  testsSnake.cpp
